fix: navlinks not showing on mobile

--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
 .secc1 {
   display: none;
 }
+#new1 {
+  color: white !important;
+}
 #new1 li a {
   color: white;
 }
